# subtitle-search-tool

./: .gitignore  DEMO.md  README.md  pyproject.toml  run.sh  subtitle_search_tool.py
test_data/: sample.srt  sample2.srt
