[project]
name = "subtitle-search-tool"
version = "0.1.0"
description = "A tool to search text in subtitle files including embedded MKV subtitles"
requires-python = ">=3.9"
dependencies = [
    "pysubs2>=1.6.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"] 